...
    <string name="format_fail">Downloading failed for %1$s</string>
    <string name="format_default">FPS: %1$2.0f Offline Iridium TLE</string>
    <string name="format_info">%1$s (%2$d)\nLAT: %3$f LON: %4$f\nALT: %5$f</string>
    <string name="title_other">Other</string>

    <!-- Strings related to Settings -->
    <string name="pref_title_db">Satellites</string>
    <string name="pref_url_title">TLE Fetch URL</string>

    <string name="pref_title_db_special">Special Interest</string>
    <string-array name="db_special_entries">
        <item>Last 30 Days Launches</item>
        <item>Space Stations</item>
...
        <item>sarsat</item>
        <item>dmc</item>
        <item>tdrss</item>
        <item>argos</item>
    </string-array>

    <string name="pref_title_db_comm">Communications</string>
    <string-array name="db_comm_entries">
        <item>Geostationary</item>
        <item>Intelsat</item>
        <item>Gorizont</item>
        <item>Raduga</item>
        <item>Molniya</item>
...
